<resources>
    <string name="facebook_app_id">251805568556262</string>
    <string name="fb_login_protocol_scheme">fb251805568556262</string>

    <string name="app_name">Country Explorer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="country_flag">country flag</string>

    <string name="countries_list">Countries</string>
    <string name="countries_visited">Visited</string>

    <string name="longname_country_txt">Longname</string>
    <string name="calling_code_country_txt">Calling code</string>
    <string name="shortname_country_txt">Shortname</string>
    <string name="flag_country_img">Flag</string>
    <string name="save_visited">Save visited</string>
    <string name="delete_visit">delete visit</string>
    <string name="visited">visited</string>
    <string name="title_activity_login">Sign in</string>

    <string name="not_logged">Not logged</string>
    <string name="login">login</string>
</resources>
